<resources>
    <string name="app_name">生活管家</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_localtion">LocaltionActivity</string>
    <string name="myLocation">当前位置</string>
    <string name="locationSearch">搜索</string>
    <string name="auto_edit_location">自动显示当前位置</string>
    <string name="item_address">ListView条目详细地址</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="username">账 户:</string>
    <string name="password">密 码:</string>
    <string name="username_message">账号</string>
    <string name="password_message">密码</string>
    <string name="login_btn">登陆</string>
    <string name="exit_btn">退出</string>
    <string name="app_message">您的生活从这里开始...</string>
    <string name="app_author">designed by freecoder</string>
    <string name="user_text_register">没有账号？</string>
    <string name="title_activity_manin_view">ManinViewActivity</string>
    <string name="login_user">小明欢迎您!</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="signin_cancel">取消</string>
    <string name="signin_title">我在这里</string>
    <string name="search_location_message">搜附近位置</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_mood">MoodActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="mood_title">签到</string>
    <string name="mood_cancel">取消</string>
    <string name="mood_message">签到说点什么吧...</string>
    <string name="mood_sure">发送</string>
    <string name="title_activity_add_contacts">AddContactsActivity</string>
</resources>
