<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="#ffcccccc"
    android:focusableInTouchMode="true"
    tools:context="youth.freecoder.graduationthesis.ui.LoginActivity">

    <LinearLayout
        android:id="@+id/theme_header"
        android:background="#E91E63"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#212121"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:src="@drawable/traveling"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#F8BBD0"
            android:layout_weight="1" />


        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:src="@drawable/message"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#212121"
            android:layout_weight="1" />


        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:src="@drawable/location"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textColor="#F8BBD0"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/main_window"
        android:background="@drawable/button_shape"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/theme_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:src="@drawable/life_manager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="30sp"
                android:textColor="#212121"
                android:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#ff040607"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="freecoder"
                android:hint="@string/username_message" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#ff040607"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="123"
                android:hint="@string/password_message" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/enter_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/login_btn"
                android:layout_marginRight="30dp" />

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/exit_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/user_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/user_text_register" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_author"
            android:textColor="#727272"
            android:layout_marginBottom="5dp"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>
