<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="youth.freecoder.graduationthesis.ui.MoodActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff2f2f2"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_title"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ff040607" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_cancel"
            android:id="@+id/mood_cancel"
            android:textSize="20sp"
            android:textColor="#ffdd5e73" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/mood_sure"
            android:id="@+id/mood_send"
            android:textSize="20sp"
            android:textColor="#ffdd5e73" />
    </FrameLayout>

    <EditText
        android:id="@+id/mood_input_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:gravity="left|top"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mood_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/affirm_address" />

            <TextView
                android:id="@+id/affirm_address"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textSize="16sp"
                android:text="西华大学" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cover_address"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:src="@drawable/cover_address" />
    </LinearLayout>
</LinearLayout>
