<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff2f2f2"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_title"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ff040607" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_cancel"
            android:id="@+id/search_cancel"
            android:textSize="20sp"
            android:textColor="#ffdd5e73" />
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="#ffc8c8c8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="15dp">

            <EditText
                android:id="@+id/search_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_location_message"
                android:singleLine="true"
                android:paddingLeft="50dp"
                android:background="@drawable/button_shape" />

            <ImageButton
                android:id="@+id/search_location_btn"
                android:background="#FFFFFF"
                android:layout_width="30dip"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="30dip"
                android:src="@drawable/search" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/aMap_region"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <com.amap.api.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <LinearLayout
                android:id="@+id/relocation_btn"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:background="@drawable/map_button_selector"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hit_location" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="当前位置" />
            </LinearLayout>
        </RelativeLayout>

        <ListView
            android:padding="10dp"
            android:id="@+id/location_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>